# MBExtender

./: .gitignore  LICENSES.txt  README.md
MBExtender/: CMakeLists.txt
MBExtender/cmake/modules/: AddExecutable.cmake  AddLibrary.cmake  AddPlugin.cmake  AddRustPlugin.cmake  AppendFlags.cmake  FilterPlatformSources.cmake  GenerateDSYM.cmake  ImportFramework.cmake
MBExtender/cmake/toolchains/: ClangCl.cmake
MBExtender/cmake/toolchains/include/: MakeSymlink.cmake  RequireEnv.cmake
MBExtender/cmake/utils/: gen_vfs_overlay.py  save_cache.py
MBExtender/plugins/: CMakeLists.txt
MBExtender/plugins/DifSupport/: CMakeLists.txt  DifSupport.cpp
MBExtender/plugins/Disco/: CMakeLists.txt  main.cpp
MBExtender/plugins/FileExtension/: CMakeLists.txt  FileExtension.cpp  FileObjectExtension.cpp  base64.cpp  base64.h
MBExtender/plugins/FrameRateUnlock/: CMakeLists.txt  FrameRateUnlock.cpp  GameTimer.hpp  HighPerformanceTimer-win32.cpp  HighPerformanceTimer-win32.hpp  MachTimer-osx.cpp  MachTimer-osx.hpp  MonotonicTimer-linux.cpp  MonotonicTimer-linux.hpp  MultimediaTimer-win32.cpp  MultimediaTimer-win32.hpp
MBExtender/plugins/GraphicsExtension/: CMakeLists.txt  FramebufferCubeMap.cpp  FramebufferCubeMap.h  GraphicsExtension.h  GraphicsExtension_script.cpp  HorizontalFovScaling.cpp  InteriorExtension.cpp  InteriorTriangleList.cpp  InteriorTriangleList.h  MarbleRenderer.cpp  MarbleRenderer.h  TSMeshTriangleList.cpp  TSMeshTriangleList.h  TextureSwapping.cpp  TriangleList.cpp  TriangleList.h  blurring.cpp  fullscreenHack.cpp  gl.h  memoizeCamera.cpp  postProcessing.cpp  reflectiveMarble.cpp
MBExtender/plugins/GraphicsExtension/difviewer/: cubeMap.cpp  cubeMap.h  io.cpp  io.h  material.cpp  material.h  shader.cpp  shader.h  skyMaterial.cpp  skyMaterial.h
MBExtender/plugins/GuiExtension/: CMakeLists.txt  GuiExtension.cpp  guiBorderButton.cpp  guiMethods.cpp  guiMethods.hpp
MBExtender/plugins/JSONSupport/: CMakeLists.txt  JSONSupport.cpp  RegexSupport.cpp  arrayObject.cpp  arrayObject.h
MBExtender/plugins/JoystickSupport/: CMakeLists.txt  JoystickSupport.cpp
MBExtender/plugins/MBPlatinum/: CMakeLists.txt  MBPlatinum.cpp  MBPlatinum.rc  bimap.h  consoleFunctions.cpp  crashReporter-win32.cpp  editorRender.cpp  fading.cpp  hostTriggerOverride.cpp  inputFocusFix-win32.cpp  konamiCode.cpp  macDedicated.cpp  mouseInput-win32.cpp  particleEmitterFix.cpp  platformAdditions.h  platformAdditions.mm  radar.cpp  resource.h  saveFieldsFix.cpp  shutdownLogging-win32.cpp  smallOverrides.cpp  sync.cpp  triggers.cpp
MBExtender/plugins/MarbleGhostingFix/: CMakeLists.txt  ClientNetwork.cpp  ConsoleMethods.cpp  Interpolation.cpp  MarbleEvent.cpp  MarbleEvent.h  MarbleGhostingFix.cpp  MarbleGhostingFix.h  MarbleOverrides.cpp  ServerNetwork.cpp
MBExtender/plugins/MathExtension/: CMakeLists.txt  MathExtension.cpp  math64.cpp
MBExtender/plugins/MovingPlatformsFix/: CMakeLists.txt  MovingPlatformsFix.cpp
MBExtender/plugins/MultiplayerFix/: CMakeLists.txt  MultiplayerFix.cpp
MBExtender/plugins/ShowExtension/: CMakeLists.txt  ShowExtension.cpp
MBExtender/plugins/SpeedBoostair/: AcceleratorCaching.cpp  CMakeLists.txt  DdsLoader.cpp  DdsLoader.h  StreamUtil.h  main.cpp
MBExtender/plugins/SpeedBoostair/DirectXTex/: DDS.h
MBExtender/plugins/TCPFix/: CMakeLists.txt  TCPFix.cpp  tcp.h  tcp.mm
MBExtender/plugins/TLSSupport/: CMakeLists.txt  TLSSupport.cpp
MBExtender/plugins/TextureSizeFix/: CMakeLists.txt  TextureSizeFix.cpp
MBExtender/rust/: CMakeLists.txt  Cargo.toml  rustfmt.toml
MBExtender/rust/mbx/: Cargo.toml  PluginLoader.lib  build.rs  wrapper.h
MBExtender/rust/mbx-gl/: Cargo.toml  build.rs
MBExtender/rust/mbx-gl/src/: lib.rs  macos.rs  windows.rs
MBExtender/rust/mbx-proc/: Cargo.toml
MBExtender/rust/mbx-proc/src/: lib.rs
MBExtender/rust/mbx/src/: allocator.rs  lib.rs  logger.rs  macros.rs  plugin.rs  prelude.rs  util.rs
MBExtender/rust/mbx/src/con_/: command.rs  mod.rs  object.rs  print.rs
MBExtender/rust/mbx/src/core/: mod.rs  resource.rs  stream.rs  vec.rs
MBExtender/rust/mbx/src/dgl/: gbitmap.rs  mod.rs  texture.rs
MBExtender/rust/mbx/src/game/: marble.rs  mod.rs  object.rs
MBExtender/rust/mbx/src/interop/: fn_ptr.rs  mod.rs  original_fn.rs  static_var.rs  virtual_destructor.rs  vtable.rs
MBExtender/rust/mbx/src/math/: box3.rs  matrix.rs  mod.rs  plane.rs  point2.rs  point3.rs  point4.rs  rect.rs
MBExtender/rust/rust-plugin/: Cargo.toml
MBExtender/rust/rust-plugin/src/: lib.rs
MBExtender/rust/speed-boostair/: Cargo.toml
MBExtender/rust/speed-boostair/src/: accel.rs  dds_loader.rs  dds_types.rs  io.rs  lib.rs
MBExtender/rust/texture-size-fix/: Cargo.toml
MBExtender/rust/texture-size-fix/src/: lib.rs
MBExtender/src/: .clang-format  CMakeLists.txt
MBExtender/src/EventLib/: CMakeLists.txt  EventLib.cpp
MBExtender/src/GLHelper/: CMakeLists.txt  GLHelper.cpp
MBExtender/src/MBExtender/: Allocator.c  CMakeLists.txt  CodeStream.cpp  Console.cpp  Event.cpp  Module.cpp  NewDelete.cpp  Override.cpp  Plugin.cpp  PluginMain.cpp
MBExtender/src/MBGPatcher/: .clang-format  CMakeLists.txt  PEFile.cpp  PEFile.h  main-win32.cpp
MBExtender/src/MathLib/: CMakeLists.txt
MBExtender/src/PluginLoader/: AllocatorOverrides-win32.cpp  AllocatorOverrides.h  CMakeLists.txt  CodeAllocator.cpp  CodeAllocator.h  ConsoleUtil.cpp  ConsoleUtil.h  Dialog-osx.mm  Dialog-win32.cpp  Dialog.h  Filesystem-unix.cpp  Filesystem-win32.cpp  Filesystem.cpp  Filesystem.h  FuncInterceptor.cpp  FuncInterceptor.h  Memory-unix.cpp  Memory-win32.cpp  Memory.h  PluginImpl.cpp  PluginImpl.h  PluginList.h.in  PluginLoader.cpp  PluginLoader.h  Random-osx.cpp  Random-win32.cpp  Random.h  SharedObject-unix.cpp  SharedObject-win32.cpp  SharedObject.h  TorqueFixes.cpp  TorqueFixes.h  TrampolineGenerator.cpp  TrampolineGenerator.h  main-unix.cpp  main-win32.cpp
MBExtender/src/TorqueLib/: CMakeLists.txt  TorqueLib.cpp
MBExtender/src/TorqueLib/include/: .clang-format
MBExtender/src/TorqueLib/math/: mEase.cpp  mMath_C.cpp  mRandom.cpp  mSolver.cpp  mSphere.cpp  mathUtils.cpp
(+128 files in other folders)
