add_subdirectory(DifSupport)
add_subdirectory(Disco)
add_subdirectory(FileExtension)
add_subdirectory(FrameRateUnlock)
add_subdirectory(GraphicsExtension)
add_subdirectory(GuiExtension)
add_subdirectory(JoystickSupport)
add_subdirectory(JSONSupport)
add_subdirectory(MarbleGhostingFix)
add_subdirectory(MathExtension)
add_subdirectory(MBPlatinum)
add_subdirectory(MovingPlatformsFix)
add_subdirectory(MultiplayerFix)
add_subdirectory(ShowExtension)
add_subdirectory(SpeedBoostair)
add_subdirectory(TCPFix)
add_subdirectory(TextureSizeFix)
add_subdirectory(TLSSupport)