[package]
name = "rust-plugin"
version = "0.1.0"
authors = ["Derpking"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["release_max_level_debug", "std"] }
mbx = { path = "../mbx" }